[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "hal integration testing of examples"
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "rust-integration-testing-of-examples"
version = "0.3.0"
edition = "2021"

[dependencies]

#  hal versions using git
                                          
stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
#stm32f1xx-hal = { version = "0.10.0", optional = true }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
#stm32f4xx-hal = { version = "0.22.1", optional = true } 
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }
#stm32f4xx-hal = {path = "/home/paul/githubClones/stm32f4xx-hal", optional = true }
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal", optional = true }
#stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal", optional = true }
#stm32g4xx-hal = { git = "https://github.com/techmccat/stm32g4xx-hal", optional = true, branch = "hal-1" }

stm32g4xx-hal = {  git = "https://github.com/pdgilbert/stm32g4xx-hal",optional = true, branch = "hal-1" }
#stm32g4xx-hal = {  git = "https://github.com/pdgilbert/stm32g4xx-hal",optional = true, branch = "hal-1-up" }

stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true , branch = "eh-v1.0"}
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
#stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
stm32l1xx-hal = { git = "https://github.com/TheCallSign/stm32l1xx-hal", optional = true, default-features = false}
#stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }
stm32l4xx-hal = { git = "https://github.com/sousandrei/stm32l4xx-hal", optional = true, branch = "feat/migrate-to-ehal-1.0" }

#  driver versions using git

dht-sensor      = { git = "https://github.com/michaelbeaumont/dht-sensor", branch = "main"}
#dht-sensor      = { git = "https://github.com/MGlolenstine/dht-sensor", branch = "main"}  // NOT no-std ?
#dht-sensor      = { git = "https://github.com/lpython/dht-sensor", branch = "main", features = ["async"]} // compiling errors

# for ssd1306
#display-interface-spi = "0.4.1" old
#tinybmp = "0.3.1"  # for loading bmp image. could be dev-dependencies

#display-interface-i2c = "0.5.0"

#ssd1306         = ">=0.8.0"   
# NB ehal1  WORKS WITH stm32h7xx BUT BREAKS stm32f4xx IN shared_bus EXAMPLES.   <************************
#      (because shared_bus does not yet have an ehal1 version that works )
#ssd1306         = { git = "https://github.com/jamwaffles/ssd1306"  }  

#ssd1306         = { git = "https://github.com/bugadani/ssd1306", branch = "ehal1"  }     #eh-1 display interface 0.8.4
#ssd1306         = { git = "https://github.com/markszente/ssd1306", branch = "master"  } #eh-1 display interface 0.5.0
#ssd1306         = { git = "https://github.com/Sycrosity/ssd1306", branch = "master"  }  #eh-1
#ssd1306         = { git = "https://github.com/jrmoulton/ssd1306", branch = "master"  }  #eh-1
#ssd1306         = { git = "https://github.com/irii/ssd1306", branch = "embedded-hal-1.0.0"  }   #eh-1
#ssd1306         = { git = "https://github.com/embedevices-rs/ssd1306", branch = "master"  } #eh-1 display-interface 0.5.0
#ssd1306         = { git = "https://github.com/embedevices-rs/ssd1306", branch = "async"  } 
ssd1306         = { git = "https://github.com/sjoerdsimons/ssd1306", branch = "master"  } # embedded-hal-1.0.0

# experiments with onewire so far only using stm32f1xx BUT compile problems can cause
# problems with src/onewire...  that prevent other examples from compiling
#onewire         = { git = "https://github.com/kellerkindt/onewire" }
#onewire         = { git = "https://github.com/asdfuser/onewire" }   # src/ libs compiled circa June 2023
onewire         = { git = "https://github.com/katyo/onewire" }       # src/ libs compiled circa Aug  2023
#katyo has an eh1 branch

#one-wire-bus     = ">=0.1.1" 
#one-wire-bus    = { git = "https://github.com/fuchsnj/one-wire-bus" }
one-wire-bus    = { git = "https://github.com/daniel-larsen/one-wire-bus" }
#one-wire-bus    = { git = "https://github.com/jneem/one-wire-bus" }
#ds18b20         = { git = "https://github.com/fuchsnj/ds18b20" }
#ds18b20         = { git = "https://github.com/robko23/ds18b20" }
#*ds18b20         = { git = "https://github.com/rednaz1337/ds18b20" }
ds18b20         = { git = "https://github.com/pdgilbert/ds18b20" }
#ds18b20         = { path = "/home/paul/githubClones/ds18b20" }

# examples//driver-examples/
mcp4x           = { git = "https://github.com/eldruin/mcp4x-rs" }# mcp4x = "0.1"
#ad983x          = { git = "https://github.com/eldruin/ad983x-rs" }  # CONFLICT needs embedded-hal = "=1.0.0-alpha.8 but stm32f4xx-hal wants 11
ads1x1x         = { git = "https://github.com/eldruin/ads1x1x-rs" }
bmi160          = { git = "https://github.com/eldruin/bmi160-rs" }
ds1307          = { git = "https://github.com/eldruin/ds1307-rs" }
eeprom24x       = { git = "https://github.com/eldruin/eeprom24x-rs" }
embedded-ccs811 = { git = "https://github.com/eldruin/embedded-ccs811-rs" }
hdc20xx         = { git = "https://github.com/eldruin/hdc20xx-rs" }
iaq-core        = { git = "https://github.com/eldruin/iaq-core-rs" }
isl29125        = { git = "https://github.com/eldruin/isl29125-rs" }
max170xx        = { git = "https://github.com/eldruin/max170xx-rs" }
max3010x        = { git = "https://github.com/eldruin/max3010x-rs" }
mcp794xx        = { git = "https://github.com/eldruin/mcp794xx-rs" }
mlx9061x        = { git = "https://github.com/eldruin/mlx9061x-rs" }
mma8x5x         = { git = "https://github.com/eldruin/mma8x5x-rs" }
opt300x         = { git = "https://github.com/eldruin/opt300x-rs" }
pwm-pca9685     = { git = "https://github.com/eldruin/pwm-pca9685-rs" }
si4703          = { git = "https://github.com/eldruin/si4703-rs" }
tcs3472         = { git = "https://github.com/eldruin/tcs3472-rs" }
tmp006          = { git = "https://github.com/eldruin/tmp006-rs" }
tmp1x2          = { git = "https://github.com/eldruin/tmp1x2-rs" }
veml6030        = { git = "https://github.com/eldruin/veml6030-rs" }
veml6070        = { git = "https://github.com/eldruin/veml6070-rs" }
veml6075        = { git = "https://github.com/eldruin/veml6075-rs" }


# examples/misc-i2c-drivers/
# See  examples/misc-i2c-drivers/i2c-sensor-notes.txt regarding various sensor crate notes.

aht10           = { git = "https://github.com/andy31415/aht10", branch = "fix_status_check" }

aht20-bl          = { package = "aht20", git = "https://github.com/blueluna/aht20" } #eh-1 now but errors are not returned, and consumes delay.

#embedded-aht20   = { git = "https://github.com/ghismary/embedded-aht20" }
embedded-aht20   = "0.1.3"     #eh-1 and both sync and async

aht20-async       = "1.0.0"
#aht20-async      = { git = "https://github.com/fmckeogh/aht20-async" } 

aht20-driver     = { version = "2.0.0", default-features = false } #eh-1 
#aht20-driver    = { git = "https://github.com/anglerud/aht20-driver", default-features = false }

#hdc1080         = { git = "https://github.com/iohe/hdc1080-rs", default-features = false }  needs std
embedded-hdc1080-rs = { git = "https://github.com/maxmarvil/hdc1080-embedded-rs" } # eh 0.2.6

embedded-sht3x   =  "0.1.0"     #eh-1 and both sync and async
#embedded-sht3x   =  https://gitlab.com/ghislainmary/embedded-sht3x/

shtcx         =  { git = "https://github.com/dbrgn/shtcx-rs" } #  eh 1.0

#htu2xd           = { git = "https://github.com/samcrow/HTU2XD" }  # 0.2.4
htu21df-sensor     = "0.1.4"
#htu21df-sensor     = { git = "https://gitlab.com/phgsng/htu21df-sensor" }  # eh 0.2


vl53l0x          = { git = "https://github.com/copterust/vl53l0x" }
#mlx9064x         = { git = "https://github.com/paxswill/mlx9064x-rs", branch = "main", features = ["libm"], default-features = false } 
#ina219           = {  version = "0.1.0" }
#ina219           = { git = "https://github.com/scttnlsn/ina219" }
#ina219           = { git = "https://github.com/sndnvaps/ina219_rs" }
ina219           = { git = "https://github.com/tdittr/ina219" }
##ina219           = { git = "https://github.com/youduda/ina219" }
#xca9548a         = { git = "https://github.com/eldruin/xca9548a-rs", rev = "d0debd2" }
xca9548a         = { git = "https://github.com/eldruin/xca9548a-rs", rev = "f7ef250" } 
#xca9548a         = ">=1.0.0"
#xca9548a         = { git = "https://github.com/eldruin/xca9548a-rs" }
ens160           = { git = "https://github.com/teamplayer3/ens160", default-features = false }
#ens160         = { git = "https://github.com/pdgilbert/ens160", features = ["no-std"], default-features = false }


## NB syntax for rtic-monotonics workspace in  rtic-rs/rtic repository
#rtic = { version = "2.0.1", features=["thumbv7-backend", "rtic-monotonics"], optional = true  }
rtic = { git = "https://github.com/rtic-rs/rtic", features=["thumbv7-backend"], optional = true  }

#rtic-monotonics = { version = "1.5.0", features = [ "cortex-m-systick"], optional = true }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = [ "cortex-m-systick"], optional = true }

#rtic-sync =  { version = "1.2.0", features = [ "unstable"], optional = true }
rtic-sync = { git = "https://github.com/rtic-rs/rtic",  optional = true }

#systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git", optional = true }

#dwt-systick-monotonic = {version = "1.0" , optional = true }  # needed for adc_dma_rtic fiddling but if not optional it stops build with stm32f0xx
dwt-systick-monotonic = {git = "https://github.com/rtic-rs/dwt-systick-monotonic" , optional = true }

# for duration timer in rtic
fugit = { version = "0.3.3", optional = true }
#fugit = { git = "https://github.com/korken89/fugit", optional = true }

#  include *also* thumbv6 support. It seems shared-bus-rtic is no longer needed.
# shared-bus-rtic = { git = "https://github.com/ryan-summers/shared-bus-rtic", features = ["thumbv6"], optional = true }


# NB seems important to use the same version of radio that is used by radio-sx127x
#  It would be nice if radio-sx127x re-exported traits Transmit and  Receive so radio is not needed.
#  That is being done in pdgilbert/rust-radio-sx127x.

#    these two work together
#radio = { version = "0.11.1", git = "https://github.com/rust-iot/radio-hal", rev = "7aade85b61c08161bf3422f7d148417bd38ecdc2" }
#radio-sx127x  = {  git = "https://github.com/matheo-lucak/rust-radio-sx127x", default-features = false }

# This radio-sx127 re-exports {Receive, Transmit} so insures correct radio version.
radio-sx127x  = {  git = "https://github.com/pdgilbert/rust-radio-sx127x", default-features = false, branch = "ehal-1" }
#radio-sx127x  = { path = "/home/paul/githubClones/rust-radio-sx127x", default-features = false }

# not used yet
#radio-sx1231  = {  git = "https://github.com/rust-io/rust-radio-sx1231", default-features = false }

#  check:  diff dev-testing/Cargo.toml release-testing/Cargo.toml
#
#  below here dev-testing/Cargo.toml should be the same as release-testing/Cargo.toml
#
# updates to crates below are not actively tested by CI. Dependabot update are
# incorporated when the update does not break things.

# NB. do not mix release and git versions.
#     embedded-hal-bus from git pulls in embedded-hal from git and traits get confused.
#     Compiler gives error
#        note: perhaps two different versions of crate `embedded_hal` are being used?
embedded-hal        = "1.0"
embedded-hal-bus    = "0.2.0"
embedded-hal-async  = "1.0.0"
embedded-io         = "0.6.1"
#embedded-hal       = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-bus   = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-io        = { git = "https://github.com/rust-embedded/embedded-hal/" }

#embedded-hal-nb    = { git = "https://github.com/rust-embedded/embedded-hal/" }

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }

embedded-graphics = ">=0.7"

shared-bus = { version = "0.3.1", features = ["cortex-m"] } 
#shared-bus = { version = "0.2.2", features = ["cortex-m"] } 
#shared-bus = {  git = "https://github.com/Rahix/shared-bus", features = ["cortex-m"] } 
# next not really rc3 yet (Jan 3, 2024 )
#shared-bus = {  git = "https://github.com/TeyKey1/shared-bus", features = ["cortex-m", "embedded-hal-alpha"] } 
heapless = "0.7"
#nb = ">=0.1.2"
nb = ">=1.1.0"
libm = "0.2"
cortex-m = ">=0.7"
cortex-m-rt = ">=0.7.0"

# for driver-examples based on https://github.com/eldruin/driver-examples

panic-rtt-target = { version =  "0.2.0"}
rtt-target = { version =  ">=0.6.1" }

cortex-m-semihosting-05   = { package = "cortex-m-semihosting", version = ">=0.5.0" } # uses eh-1 but no unwrap()
cortex-m-semihosting = { version = "0.3.7" }   #test carefully when updating. Version change can break many examples

panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
#void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]
# rtic does not work on stm32f0xx and stm32l0xx devices ??
#stm32f0xx = ["stm32f0xx-hal/rt" , "shared-bus-rtic"]
stm32f0xx = ["stm32f0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32f1xx = ["stm32f1xx-hal", "rtic", "rtic-monotonics" ]
stm32f3xx = ["stm32f3xx-hal/rt", "rtic", "rtic-monotonics" ]
#stm32f4xx = ["stm32f4xx-hal/rt", "rtic", "dwt-systick-monotonic"]
stm32f4xx = ["stm32f4xx-hal", "rtic", "rtic-monotonics", "rtic-sync" ] 
stm32f7xx = ["stm32f7xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32g0xx = ["stm32g0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32g4xx = ["stm32g4xx-hal/rt", "rtic", "rtic-monotonics", "rtic-sync" ]
stm32h7xx = ["stm32h7xx-hal/rt", "rtic", "rtic-monotonics", "rtic-sync" ]
stm32l0xx = ["stm32l0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32l1xx = ["stm32l1xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32l4xx = ["stm32l4xx-hal/rt", "rtic", "rtic-monotonics" ]

stm32f030xc   = ["stm32f0xx-hal/stm32f030xc"]
stm32f042     = ["stm32f0xx-hal/stm32f042"  ]
stm32f100     = ["stm32f1xx-hal/stm32f100"  ]
stm32f101     = ["stm32f1xx-hal/stm32f101"  ]
stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f303xc   = ["stm32f3xx-hal/stm32f303xc"] 
stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f405     = ["stm32f4xx-hal/stm32f405"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
stm32f722     = ["stm32f7xx-hal/stm32f722"  ] # no adc in hall yet
stm32f769     = ["stm32f7xx-hal/stm32f769"  ] # this has adc support but no access to internal channel for mcu temperature
stm32g081     = ["stm32g0xx-hal/stm32g081"  ]
stm32g431xB   = ["stm32g4xx-hal/stm32g431"  ]
stm32g473     = ["stm32g4xx-hal/stm32g473"  ]
stm32g474xE   = ["stm32g4xx-hal/stm32g474"  ]
stm32h742     = ["stm32h7xx-hal/stm32h742"  ]
stm32h743     = ["stm32h7xx-hal/stm32h743"  ]
stm32h750     = ["stm32h7xx-hal/stm32h750"  ]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
#stm32l0x2     =    ["stm32l0xx-hal/stm32l0x2",  "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l0x2kztx     = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L053R8Tx"]
#stm32l0x1     = ["stm32l0xx-hal/stm32l0x1",     "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100     = ["stm32l1xx-hal/stm32l100"  ]
stm32l151     = ["stm32l1xx-hal/stm32l151"  ]
stm32l471     = ["stm32l4xx-hal/stm32l471"  ]
stm32l422     = ["stm32l4xx-hal/stm32l422"  ]
stm32l486     = ["stm32l4xx-hal/stm32l486"  ]

# temp-humidity sensor choice in projects
hdc1080   = []
htu2      = []
aht10     = []
aht20     = []
dht11     = []
dht22     = []

## example sections are needed because examples are organized in subdirectories under examples/

# examples/drivers-examples

[[example]]
name = "ad9833-midi-player"
path = "examples/driver-examples/ad9833-midi-player.rs"

[[example]]
name = "ads1015-adc-display"
path = "examples/driver-examples/ads1015-adc-display.rs"

[[example]]
name = "at24c256-eeprom"
path = "examples/driver-examples/at24c256-eeprom.rs"

[[example]]
name = "bmi160-imu-display"
path = "examples/driver-examples/bmi160-imu-display.rs"

[[example]]
name = "ccs811-gas-voc-display"
path = "examples/driver-examples/ccs811-gas-voc-display.rs"

[[example]]
name = "ccs811-gas-voc-hdc2080-display"
path = "examples/driver-examples/ccs811-gas-voc-hdc2080-display.rs"

[[example]]
name = "ds1307-rtc"
path = "examples/driver-examples/ds1307-rtc.rs"

[[example]]
name = "hdc2080-temp-humidity-display"
path = "examples/driver-examples/hdc2080-temp-humidity-display.rs"

[[example]]
name = "iaq-core-c-gas-voc-display"
path = "examples/driver-examples/iaq-core-c-gas-voc-display.rs"

[[example]]
name = "isl29125-color-display"
path = "examples/driver-examples/isl29125-color-display.rs"

[[example]]
name = "max17043-battery-monitor-display"
path = "examples/driver-examples/max17043-battery-monitor-display.rs"

[[example]]
name = "max30102-heart-usart"
path = "examples/driver-examples/max30102-heart-usart.rs"

[[example]]
name = "max30102-display"
path = "examples/driver-examples/max30102-display.rs"

[[example]]
name = "mcp7940n-rtc-display"
path = "examples/driver-examples/mcp7940n-rtc-display.rs"

[[example]]
name = "mlx90614-temperature-display"
path = "examples/driver-examples/mlx90614-temperature-display.rs"

[[example]]
name = "mlx90615-temperature-display"
path = "examples/driver-examples/mlx90615-temperature-display.rs"

[[example]]
name = "mma8452-accel-display"
path = "examples/driver-examples/mma8452-accel-display.rs"

[[example]]
name = "opt3001-als-display"
path = "examples/driver-examples/opt3001-als-display.rs"

[[example]]
name = "pca9685-pwm-rgb-led-servos"
path = "examples/driver-examples/pca9685-pwm-rgb-led-servos.rs"

[[example]]
name = "si4703-fm-radio-display"
path = "examples/driver-examples/si4703-fm-radio-display.rs"

[[example]]
name = "si4703-fm-radio"
path = "examples/driver-examples/si4703-fm-radio.rs"

[[example]]
name = "tcs34725-color-display"
path = "examples/driver-examples/tcs34725-color-display.rs"

[[example]]
name = "tmp006-ir-temp-display"
path = "examples/driver-examples/tmp006-ir-temp-display.rs"

[[example]]
name = "tmp102-temp-display"
path = "examples/driver-examples/tmp102-temp-display.rs"

[[example]]
name = "veml6030-als-display"
path = "examples/driver-examples/veml6030-als-display.rs"

[[example]]
name = "veml6070-uv-display"
path = "examples/driver-examples/veml6070-uv-display.rs"

[[example]]
name = "veml6075-uv-display"
path = "examples/driver-examples/veml6075-uv-display.rs"

[[example]]
name = "ccs811-gas-voc-usart-logger"
path = "examples/driver-examples/ccs811-gas-voc-usart-logger.rs"

[[example]]
name = "iaq-core-c-gas-voc-usart-logger"
path = "examples/driver-examples/iaq-core-c-gas-voc-usart-logger.rs"


# examples/radio-sx127x

[[example]]
name = "lora_spi_send"
path = "examples/radio-sx127x/lora_spi_send.rs"

[[example]]
name = "lora_spi_receive"
path = "examples/radio-sx127x/lora_spi_receive.rs"

[[example]]
name = "lora_spi_gps"
path = "examples/radio-sx127x/lora_spi_gps.rs"


# examples/misc

[[example]]
name = "blink"
path = "examples/misc/blink.rs"

[[example]]
name = "blink_impl"
path = "examples/misc/blink_impl.rs"

[[example]]
name = "blink3"
path = "examples/misc/blink3.rs"

[[example]]
name = "dht"
path = "examples/misc/dht.rs"

[[example]]
name = "oled_dht"
path = "examples/misc/oled_dht.rs"

[[example]]
name = "digi_pot"
path = "examples/misc/digi_pot.rs"

[[example]]
name = "echo_by_char"
path = "examples/misc/echo_by_char.rs"

[[example]]
name = "echo_string"
path = "examples/misc/echo_string.rs"

[[example]]
name = "serial_char"
path = "examples/misc/serial_char.rs"

[[example]]
name = "serial_string"
path = "examples/misc/serial_string.rs"

[[example]]
name = "temperature"
path = "examples/misc/temperature.rs"

[[example]]
name = "oled_temperature"
path = "examples/misc/oled_temperature.rs"

[[example]]
name = "therm10k_display"
path = "examples/misc/therm10k_display.rs"

[[example]]
name = "gps_rw"
path = "examples/misc/gps_rw.rs"

[[example]]
name = "text_i2c"
path = "examples/misc/text_i2c.rs"

[[example]]
name = "oled_gps"
path = "examples/misc/oled_gps.rs"

[[example]]
name = "spi"
path = "examples/misc/spi.rs"

# considerable overlap between battery_monitor_ads1015 and /misc-i2c-drivers/ads_ina_ssd
# and also rtic versions. Consider removing one.
[[example]]
name = "battery_monitor_ads1015"
path = "examples/misc/battery_monitor_ads1015.rs"

[[example]]
name = "onewire"
path = "examples/misc/onewire.rs"

[[example]]
name = "one_wire_bus_find_devices"
path = "examples/misc/one_wire_bus_find_devices.rs"

[[example]]
name = "ds18b20"
path = "examples/misc/ds18b20.rs"


# examples/rtic

[[example]]
name = "blink_rtic"
path = "examples/rtic/blink_rtic.rs"

[[example]]
name = "gps_rw_rtic"
path = "examples/rtic/gps_rw_rtic.rs"

[[example]]
name = "schedule"
path = "examples/rtic/schedule.rs"

[[example]]
name = "resource-user-struct"
path = "examples/rtic/resource-user-struct.rs"

[[example]]
name = "dht_rtic"
path = "examples/rtic/dht_rtic.rs"

[[example]]
name = "aht10_rtic"
path = "examples/rtic/aht10_rtic.rs"

[[example]]
name = "htu2xd_rtic"
path = "examples/rtic/htu2xd_rtic.rs"

[[example]]
name = "display_stuff_rtic0"
path = "examples/rtic/display_stuff_rtic0.rs"

[[example]]
name = "display_stuff_rtic"
path = "examples/rtic/display_stuff_rtic.rs"

[[example]]
name = "display_stuff_rtic_shared_bus"
path = "examples/rtic/display_stuff_rtic_shared_bus.rs"

[[example]]
name = "ccs811-co2-voc"
path = "examples/rtic/ccs811-co2-voc.rs"

[[example]]
name = "battery_monitor_ads1015_rtic"
path = "examples/rtic/battery_monitor_ads1015_rtic.rs"

[[example]]
name = "battery_monitor_ads1015_rtic_dma"
path = "examples/rtic/battery_monitor_ads1015_rtic_dma.rs"

[[example]]
name = "ads_ina_ssd_rtic"
path = "examples/rtic/ads_ina_ssd_rtic.rs"

[[example]]
name = "ina219_rtic"
path = "examples/rtic/ina219_rtic.rs"

[[example]]
name = "displayX2_rtic"
path = "examples/rtic/displayX2_rtic.rs"

[[example]]
name = "serial-dma"
path = "examples/rtic/serial-dma.rs"


# examples/misc-i2c-drivers

[[example]]
name = "aht20-bl-semi"
path = "examples/misc-i2c-drivers/aht20-bl-semi.rs"

[[example]]
name = "aht20-em-semi"
path = "examples/misc-i2c-drivers/aht20-em-semi.rs"

[[example]]
name = "aht20-dr-semi"
path = "examples/misc-i2c-drivers/aht20-dr-semi.rs"

[[example]]
name = "sht30-em-semi"
path = "examples/misc-i2c-drivers/sht30-em-semi.rs"

[[example]]
name = "shtc3-semi"
path = "examples/misc-i2c-drivers/shtc3-semi.rs"

[[example]]
name = "ens160-co2-voc-iaq-display"
path = "examples/misc-i2c-drivers/ens160-co2-voc-iaq-display.rs"

# considerable overlap between /misc/battery_monitor_ads1015 and /misc-i2c-drivers/ads_ina_ssd
# and also rtic versions. Consider removing one.
[[example]]
name = "ads_ina_ssd"
path = "examples/misc-i2c-drivers/ads_ina_ssd.rs"

[[example]]
name = "htu2xd-display"
path = "examples/misc-i2c-drivers/htu2xd-display.rs"

[[example]]
name = "aht10-display"
path = "examples/misc-i2c-drivers/aht10-display.rs"

[[example]]
name = "aht20-display"
path = "examples/misc-i2c-drivers/aht20-display.rs"

[[example]]
name = "aht20-em-display"
path = "examples/misc-i2c-drivers/aht20-em-display.rs"

[[example]]
name = "aht20-display-nodelay"
path = "examples/misc-i2c-drivers/aht20-display-nodelay.rs"

[[example]]
name = "hdc1080-display"
path = "examples/misc-i2c-drivers/hdc1080-display.rs"

[[example]]
name = "vl53lox-display"
path = "examples/misc-i2c-drivers/vl53lox-display.rs"

[[example]]
name = "mlx9064x"
path = "examples/misc-i2c-drivers/mlx9064x.rs"

[[example]]
name = "ina219-display"
path = "examples/misc-i2c-drivers/ina219-display.rs"

[[example]]
name = "xca9548a-aht20-bl"
path = "examples/misc-i2c-drivers/xca9548a-aht20-bl.rs"

[[example]]
name = "xca9548a-aht20-em"
path = "examples/misc-i2c-drivers/xca9548a-aht20-em.rs"

[[example]]
name = "xca9548a-aht20-dr"
path = "examples/misc-i2c-drivers/xca9548a-aht20-dr.rs"

[[example]]
name = "xca9548a-sht30"
path = "examples/misc-i2c-drivers/xca9548a-sht30.rs"

[[example]]
name = "xca9548a-shtc3"
path = "examples/misc-i2c-drivers/xca9548a-shtc3.rs"

[[example]]
name = "xca9548a_hdc2080"
path = "examples/misc-i2c-drivers/xca9548a_hdc2080.rs"


# examples/projects

[[example]]
name = "temp-humidity-display"
path = "examples/projects/temp-humidity-display.rs"

[[example]]
name = "temperature-display"
path = "examples/projects/temperature-display.rs"

[[example]]
name = "temperature-display_no-rtic"
path = "examples/projects/temperature-display_no-rtic.rs"

[[example]]
name = "temperature-display_4jst"
path = "examples/projects/temperature-display_4jst.rs"

[[example]]
name = "iaq_ens160aht21_display"
path = "examples/projects/iaq_ens160aht21_display.rs"

[[example]]
name = "lora_show_ping"
path = "examples/projects/lora_show_ping.rs"

[[example]]
name = "lora_show_ping_v1"
path = "examples/projects/lora_show_ping_v1.rs"
