[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "hal integration testing of examples"
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "hal-integration-testing-of-examples"
version = "0.1.0"
edition = "2018"

[dependencies]

#  hal versions using release

stm32f0xx-hal = { version = ">=0.17", optional = true }
stm32f1xx-hal = { version = ">=0.7",  optional = true } #0.6
stm32f3xx-hal = { version = ">=0.6",  optional = true }
stm32f4xx-hal = { version = ">=0.9",  optional = true }
stm32f7xx-hal = { version = ">=0.3",  optional = true }
stm32h7xx-hal = { version = ">=0.9",  optional = true }
stm32l0xx-hal = { version = ">=0.7",  optional = true }
stm32l1xx-hal = { version = ">=0.1",  optional = true, default-features = false}
stm32l4xx-hal = { version = ">=0.6",  optional = true }

#  driver versions using  release

ad983x          = ">=0.2"
ads1x1x         = ">=0.2"
bmi160          = ">=0.1"
ds1307          = ">=0.3"
eeprom24x       = ">=0.3"
embedded-ccs811 = ">=0.2"
hdc20xx         = ">=0.1"
iaq-core        = ">=0.1"
isl29125        = ">=0.1"
max170xx        = ">=0.1"
max3010x        = ">=0.1"
mcp794xx        = ">=0.2"
mlx9061x        = ">=0.1"
mma8x5x         = ">=0.1"
opt300x         = ">=0.1"
pwm-pca9685     = ">=0.3"
si4703          = ">=0.1"
tcs3472         = ">=0.2"
tmp006          = ">=0.1"
tmp1x2          = ">=0.2"
veml6030        = ">=0.1"
veml6070        = ">=0.1"
veml6075        = ">=0.2"
 
# only certain versions of radio and radio-sx127x work together
radio         = { version = "0.9.0" }
radio-sx127x  = { version = "0.11.0", default-features = false }

#  check:  diff hal-testing/Cargo.toml driver-testing/Cargo.toml
#
#  below here release-testing/Cargo.toml should be the same as dev-testing/Cargo.toml
#
# crates below are semi-fixed and not actively tested by CI. Dependabot update are
# incorporated when the update does not break things.

embedded-hal = {version = "^0.2.4" }

ssd1306 = "0.4"
embedded-graphics = "0.6"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.7"
nb = ">=0.1.2"
libm = "0.2"
cortex-m = ">=0.7"
cortex-m-rt = "0.6.5"

# for driver-examples based on https://github.com/eldruin/driver-examples

cortex-m-rtic = "0.5.3"
shared-bus-rtic = { version = "0.2.2", optional = true }
panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  ">=0.3.1", features = ["cortex-m"] }


# for radio-sx127x  https://github.com/rust-iot/rust-radio-sx127x

#embedded-hal  1.0.0-alpha
e-h-1a = {version = "1.0.0-alpha.4", package = "embedded-hal" }

embedded-hal-compat =  { version = "0.1.3"} #, optional = true}
#embedded-hal-compat = { git = "https://github.com/ryankurte/embedded-hal-compat.git", branch = "main", optional = true}

cortex-m-semihosting = { version = "0.3.7" }
panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]
stm32f0xx = []
stm32f1xx = []
stm32f3xx = []
stm32f4xx = []
stm32f7xx = []
stm32h7xx = []
stm32l0xx = []
stm32l1xx = []
stm32l4xx = []

stm32f030xc   = ["stm32f0xx-hal/stm32f030xc", "stm32f0xx-hal/rt"]
stm32f042     = ["stm32f0xx-hal/stm32f042",   "stm32f0xx-hal/rt"]
stm32f100     = ["stm32f1xx-hal/stm32f100",   "stm32f1xx-hal/rt"]
stm32f101     = ["stm32f1xx-hal/stm32f101",   "stm32f1xx-hal/rt", "shared-bus-rtic"]
stm32f103     = ["stm32f1xx-hal/stm32f103",   "stm32f1xx-hal/rt", "shared-bus-rtic", "stm32f1xx-hal/medium"]
stm32f303xc   = ["stm32f3xx-hal/stm32f303xc", "stm32f3xx-hal/rt", "shared-bus-rtic"] 
stm32f401     = ["stm32f4xx-hal/stm32f401",   "stm32f4xx-hal/rt", "shared-bus-rtic"] 
stm32f405     = ["stm32f4xx-hal/stm32f405",   "stm32f4xx-hal/rt", "shared-bus-rtic"] 
stm32f411     = ["stm32f4xx-hal/stm32f411",   "stm32f4xx-hal/rt", "shared-bus-rtic"] 
stm32f722     = ["stm32f7xx-hal/stm32f722",   "stm32f7xx-hal/rt", "shared-bus-rtic"] 
stm32h742     = ["stm32h7xx-hal/stm32h742",   "stm32h7xx-hal/rt", "shared-bus-rtic"]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
stm32l0x2     =    ["stm32l0xx-hal/stm32l0x2","stm32l0xx-hal/rt",                    "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",   "stm32l0xx-hal/rt",                    "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l0x1     = ["stm32l0xx-hal/stm32l0x1",   "stm32l0xx-hal/rt", "shared-bus-rtic", "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100     = ["stm32l1xx-hal/stm32l100",   "stm32l1xx-hal/rt", "shared-bus-rtic"]
stm32l151     = ["stm32l1xx-hal/stm32l151",   "stm32l1xx-hal/rt", "shared-bus-rtic"]
stm32l4x1     = ["stm32l4xx-hal/stm32l4x1",   "stm32l4xx-hal/rt", "shared-bus-rtic"]
stm32l4x2     = ["stm32l4xx-hal/stm32l4x2",   "stm32l4xx-hal/rt", "shared-bus-rtic"]
stm32l4x6     = ["stm32l4xx-hal/stm32l4x6",   "stm32l4xx-hal/rt", "shared-bus-rtic"]


## example sections are needed because examples are organized in subdirectories under examples/

# radio-sx127x examples

[[example]]
name = "ad9833-midi-player"
path = "examples/driver-examples/ad9833-midi-player.rs"

[[example]]
name = "ads1015-adc-display"
path = "examples/driver-examples/ads1015-adc-display.rs"

[[example]]
name = "at24c256-eeprom"
path = "examples/driver-examples/at24c256-eeprom.rs"

[[example]]
name = "bmi160-imu-display"
path = "examples/driver-examples/bmi160-imu-display.rs"

[[example]]
name = "ccs811-gas-voc-display"
path = "examples/driver-examples/ccs811-gas-voc-display.rs"

[[example]]
name = "ccs811-gas-voc-hdc2080-display"
path = "examples/driver-examples/ccs811-gas-voc-hdc2080-display.rs"

[[example]]
name = "ds1307-rtc"
path = "examples/driver-examples/ds1307-rtc.rs"

[[example]]
name = "hdc2080-temp-humidity-display"
path = "examples/driver-examples/hdc2080-temp-humidity-display.rs"

[[example]]
name = "iaq-core-c-gas-voc-display"
path = "examples/driver-examples/iaq-core-c-gas-voc-display.rs"

[[example]]
name = "isl29125-color-display"
path = "examples/driver-examples/isl29125-color-display.rs"

[[example]]
name = "max17043-battery-monitor-display"
path = "examples/driver-examples/max17043-battery-monitor-display.rs"

[[example]]
name = "max30102-heart-usart"
path = "examples/driver-examples/max30102-heart-usart.rs"

[[example]]
name = "mcp7940n-rtc-display"
path = "examples/driver-examples/mcp7940n-rtc-display.rs"

[[example]]
name = "mlx90614-temperature-display"
path = "examples/driver-examples/mlx90614-temperature-display.rs"

[[example]]
name = "mlx90615-temperature-display"
path = "examples/driver-examples/mlx90615-temperature-display.rs"

[[example]]
name = "mma8452-accel-display"
path = "examples/driver-examples/mma8452-accel-display.rs"

[[example]]
name = "opt3001-als-display"
path = "examples/driver-examples/opt3001-als-display.rs"

[[example]]
name = "pca9685-pwm-rgb-led-servos"
path = "examples/driver-examples/pca9685-pwm-rgb-led-servos.rs"

[[example]]
name = "si4703-fm-radio-display"
path = "examples/driver-examples/si4703-fm-radio-display.rs"

[[example]]
name = "si4703-fm-radio"
path = "examples/driver-examples/si4703-fm-radio.rs"

[[example]]
name = "tcs34725-color-display"
path = "examples/driver-examples/tcs34725-color-display.rs"

[[example]]
name = "tmp006-ir-temp-display"
path = "examples/driver-examples/tmp006-ir-temp-display.rs"

[[example]]
name = "tmp102-temp-display"
path = "examples/driver-examples/tmp102-temp-display.rs"

[[example]]
name = "veml6030-als-display"
path = "examples/driver-examples/veml6030-als-display.rs"

[[example]]
name = "veml6070-uv-display"
path = "examples/driver-examples/veml6070-uv-display.rs"

[[example]]
name = "veml6075-uv-display"
path = "examples/driver-examples/veml6075-uv-display.rs"

[[example]]
name = "ccs811-gas-voc-usart-logger"
path = "examples/driver-examples/ccs811-gas-voc-usart-logger.rs"

[[example]]
name = "iaq-core-c-gas-voc-usart-logger"
path = "examples/driver-examples/iaq-core-c-gas-voc-usart-logger.rs"


# radio-sx127x examples

[[example]]
name = "lora_spi_send"
path = "examples/radio-sx127x/lora_spi_send.rs"

[[example]]
name = "lora_spi_receive"
path = "examples/radio-sx127x/lora_spi_receive.rs"

[[example]]
name = "lora_spi_gps"
path = "examples/radio-sx127x/lora_spi_gps.rs"
